--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,19 @@
   max-width: 400px;
   max-height: 600px;
 }
+
+.price-box {
+  box-shadow: 0px 3px 10px -8px black;
+  border-radius: 10px;
+  border: 10px solid whitesmoke;
+  height: 150px;
+  width: 150px;
+}
+
+.camera-box {
+  box-shadow: 0px 3px 10px -13px black;
+  border-radius: 6px;
+  background-color: #fdfdfd;
+  margin: 10px !important;
+
+}
