--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
   width: 150px;
 }
 
-.camera-box {
+.box {
   box-shadow: 0px 3px 10px -13px black;
   border-radius: 6px;
   background-color: #fdfdfd;
