--- a/src/App.css
+++ b/src/App.css
@@ -47,13 +47,20 @@
 .price-box {
   box-shadow: 0px 3px 10px -8px black;
   border-radius: 10px;
-  border: 10px solid whitesmoke;
+  border: 10px solid #e3e3e3;
   height: 150px;
   width: 150px;
 }
 
+.image-box {
+  box-shadow: 0px 3px 10px -9px black;
+  border-radius: 10px;
+  border: 10px solid #e3e3e3;
+
+}
+
 .box {
-  box-shadow: 0px 3px 10px -13px black;
+  box-shadow: 0px 3px 10px -12px black;
   border-radius: 6px;
   background-color: #fdfdfd;
   margin: 10px !important;
